first attempt at implementing the new spec
