# nadiki_registrar/models/__init__.py
@@ -19,6 +19,9 @@ from nadiki_registrar.models.list_facilities200_response import ListFacilities20
 from nadiki_registrar.models.list_racks200_response import ListRacks200Response
 from nadiki_registrar.models.list_servers200_response import ListServers200Response
 from nadiki_registrar.models.location import Location
+from nadiki_registrar.models.metric_mapping_configuration import MetricMappingConfiguration
+from nadiki_registrar.models.metric_mapping_object import MetricMappingObject
+from nadiki_registrar.models.metric_mapping_object_server_power_consumption import MetricMappingObjectServerPowerConsumption
 from nadiki_registrar.models.rack_create import RackCreate
 from nadiki_registrar.models.rack_response import RackResponse
 from nadiki_registrar.models.rack_response_all_of import RackResponseAllOf
