# nadiki_registrar/models/server_time_series_data_point.py
@@ -7,11 +7,9 @@ from typing import List, Dict  # noqa: F401
 
 from nadiki_registrar.models.base_model_ import Model
 from nadiki_registrar.models.server_time_series_data_point_tags import ServerTimeSeriesDataPointTags
-import re
 from nadiki_registrar import util
 
 from nadiki_registrar.models.server_time_series_data_point_tags import ServerTimeSeriesDataPointTags  # noqa: E501
-import re  # noqa: E501
 
 class ServerTimeSeriesDataPoint(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -19,7 +17,7 @@ class ServerTimeSeriesDataPoint(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, measurement=None, field=None, granularity_seconds=30, tags=None):  # noqa: E501
+    def __init__(self, measurement=None, field=None, granularity_seconds=None, tags=None):  # noqa: E501
         """ServerTimeSeriesDataPoint - a model defined in OpenAPI
 
         :param measurement: The measurement of this ServerTimeSeriesDataPoint.  # noqa: E501
@@ -94,7 +92,7 @@ class ServerTimeSeriesDataPoint(Model):
     def field(self):
         """Gets the field of this ServerTimeSeriesDataPoint.
 
-        Metric name with unit suffix  # noqa: E501
+        Metric name to be written to InfluxDB (derived from target_metric in the mapping)  # noqa: E501
 
         :return: The field of this ServerTimeSeriesDataPoint.
         :rtype: str
@@ -105,15 +103,13 @@ class ServerTimeSeriesDataPoint(Model):
     def field(self, field):
         """Sets the field of this ServerTimeSeriesDataPoint.
 
-        Metric name with unit suffix  # noqa: E501
+        Metric name to be written to InfluxDB (derived from target_metric in the mapping)  # noqa: E501
 
         :param field: The field of this ServerTimeSeriesDataPoint.
         :type field: str
         """
         if field is None:
             raise ValueError("Invalid value for `field`, must not be `None`")  # noqa: E501
-        if field is not None and not re.search(r'^(cpu_energy_consumption_joules|server_energy_consumption_joules)$', field):  # noqa: E501
-            raise ValueError("Invalid value for `field`, must be a follow pattern or equal to `/^(cpu_energy_consumption_joules|server_energy_consumption_joules)$/`")  # noqa: E501
 
         self._field = field
 
@@ -121,7 +117,7 @@ class ServerTimeSeriesDataPoint(Model):
     def granularity_seconds(self):
         """Gets the granularity_seconds of this ServerTimeSeriesDataPoint.
 
-        Time series data granularity in seconds  # noqa: E501
+        Time series data granularity in seconds (from measurement_interval in the mapping)  # noqa: E501
 
         :return: The granularity_seconds of this ServerTimeSeriesDataPoint.
         :rtype: int
@@ -132,7 +128,7 @@ class ServerTimeSeriesDataPoint(Model):
     def granularity_seconds(self, granularity_seconds):
         """Sets the granularity_seconds of this ServerTimeSeriesDataPoint.
 
-        Time series data granularity in seconds  # noqa: E501
+        Time series data granularity in seconds (from measurement_interval in the mapping)  # noqa: E501
 
         :param granularity_seconds: The granularity_seconds of this ServerTimeSeriesDataPoint.
         :type granularity_seconds: int
